--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>CreateJS Latex Demo</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="demo.css" rel="stylesheet" type="text/css">
   <link href="katex-fonts/fonts.css" rel="stylesheet" type="text/css" />
   <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
@@ -19,8 +20,8 @@
     <div class="row">
       <div class="col">
         <input class="form-control" type="text" id="input" placeholder="Enter your equation here!" />
-        <br/>
-        <canvas id="canvas" width="800" height="400"></canvas>
+        <br />
+        <canvas id="canvas" width="1600" height="800"></canvas>
       </div>
       <div class="col">
       </div>
